--- a/css/templatemo-diagoona.css
+++ b/css/templatemo-diagoona.css
@@ -51,7 +51,8 @@ p { line-height: 1.9; }
     font-size: 1.3rem;
     font-weight: 400;
     color: white;    
-    padding-bottom: 30px;    
+    padding-bottom: 30px; 
+    z-index: 10000;   
 }
 
 .nav-item { margin-right: 60px; }
@@ -86,6 +87,7 @@ p { line-height: 1.9; }
 .tm-bg-left {
     border-right: 230px solid rgba(0,0,0,0.5);
     border-top: 100vh solid transparent;
+    z-index: -1;
 }
 
 .tm-bg-controls-wrapper {
@@ -118,7 +120,8 @@ p { line-height: 1.9; }
     justify-content: space-between;  
 }
 
-.tm-row { display: flex; }
+.tm-row { display: flex; 
+z-index: -1;}
 
 .tm-col-left {
     width: 50%;
@@ -132,7 +135,6 @@ p { line-height: 1.9; }
     height: 100%;
     padding-left: 70px;
     padding-right: 70px;
-    z-index: 10000000;
 }
 
 .tm-content {
